<resources>
    <string name="app_name">MyOllie</string>
    <string name="button1">Connexion au Myo</string>
    <string name="button2">Bleu</string>
    <string name="button5">Vert</string>
    <string name="button4">Rouge</string>
    <string name="button3">Connexion à Ollie</string>
    <string name="couleurs">Couleur du robot :</string>
    <string name="vitesse_robot">Vitesse du robot :</string>
    <string name="random">Random</string>
</resources>
