<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp" tools:context=".MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="60dp"
            android:layout_gravity="center"
            android:text="@string/button1"
            android:onClick="onClick"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:width="90dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/textMyo"/>

    </GridLayout>



    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="60dp"
            android:text="@string/button3"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:width="90dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:id="@+id/textOllie"/>

    </GridLayout>



    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:rowCount="2"
        android:columnCount="1">


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/couleurs"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:rowCount="1"
            android:columnCount="3">


            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/rouge"
                android:onClick="onClick"
                android:layout_marginEnd="16dp"
                android:width="20dp"
                />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/vert"
                android:onClick="onClick"
                android:layout_marginEnd="16dp"
                android:width="40dp"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bleu"
                android:onClick="onClick"
                android:width="40dp"
                />

        </GridLayout>


        <Button
            android:id="@+id/randomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/random"
            android:background="@color/colorPrimary"
            android:onClick="onClick"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/vitesse_robot"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:rowCount="1"
            android:columnCount="3">


            <Button
                android:id="@+id/vitesse1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:textColor="@color/texte"
                android:textSize="18sp"
                android:background="@color/vitesse"
                android:onClick="changementVitesse"
                android:layout_marginEnd="16dp"
                android:width="80dp"
                />

            <Button
                android:id="@+id/vitesse2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:textColor="@color/texte"
                android:textSize="18sp"
                android:background="@color/vitesse"
                android:onClick="changementVitesse"
                android:layout_marginEnd="16dp"
                android:width="80dp"
                />

            <Button
                android:id="@+id/vitesse3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:textColor="@color/texte"
                android:textSize="18sp"
                android:background="@color/vitesse"
                android:onClick="changementVitesse"
                android:layout_marginEnd="16dp"
                android:width="80dp"
                />

        </GridLayout>


    </GridLayout>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Ici mettre les instructions"
        android:id="@+id/textView"/>
-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/myogesturecontrol"/>


</LinearLayout>